added footer content and another additions

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 		<p>- Ivo Tanev from Burgas, Bulgaria.</p>
 		<p>high motivated web developer.</p>
 	</header>
+
 	<div id='about-me' class="container">
 		<div class="resume row">
 			<div class="col-sm-6">
@@ -30,14 +31,19 @@
 					I am Ivo and I have 2+ years experience in developing web applications. I love to made things, I want to learn everyting, but the time flow cannot be stopped.
 				</p>
 				<p>
-					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and trying to do the things better and better.
-				</p>	
+					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and trying to do the things better and better. <br/>
+					Usually I working on my own projects based on own ideas or needs.
+				</p>
+				<p>
+					Currently I am interested in AngularJS, Polymer, Node.js and mobile development.
+				</p>
 			</div>
 			<div class="col-sm-6 text-center myself-div">
 				<img src="images/myself.jpg" alt="Me" class="img-thumbnail myself-image">
 			</div>
 		</div>
 	</div>
+
 	<section id="section" class="container-fluid content-holder">
 		<div class="tabs-row row">
 			<div class="col-sm-3 text-center generic-tab tab-knowledge"><span class="btn btn-info">Knowledge</span></div>
@@ -52,9 +58,53 @@
 			</div>
 		</div>
 	</section>
+
 	<footer id="footer">
-		
+		<div class="container-fluid text-center">
+			<h1>Linked House</h1>
+			<p>A project with an idea to store your bookmarks online.</p>
+			<a href="http://linkedhouse-ifch0o1webapps.rhcloud.com" class="link-image row">
+				<img src="images/linkedhouse-prew.png" class="col-sm-12 col-md-10 col-md-offset-1 img-responsive">
+			</a>
+		</div>
+		<div class="row text-center">
+			<div class="col-xs-10 col-xs-offset-1">
+				<span style="margin-top: 80px" class="glyphicon glyphicon-sort footer-glyph"></span>
+			</div>
+			<div class="row vertical-align pad-80">
+				<div class="col-xs-3">
+					<a class="link-image row">
+						<img src="images/dev-logos/js-1.png" class="dev-logo col-xs-12">
+						<span class="link-image-text text-center col-xs-12">JavaScript</span>
+					</a>
+				</div>
+				<div class="col-xs-3">
+					<a class="link-image row">
+						<img src="images/dev-logos/jq-2.png" class="dev-logo col-xs-12">
+						<span class="link-image-text text-center col-xs-12">jQuery</span>
+					</a>
+				</div>
+				<div class="col-xs-3">
+					<a class="link-image row">
+						<img src="images/dev-logos/laravel-1.jpg" class="dev-logo col-xs-12">
+						<span class="link-image-text text-center col-xs-12">Laravel 4</span>
+					</a>
+				</div>
+				<div class="col-xs-3">
+					<a class="link-image row">
+						<img src="images/dev-logos/mysql-1.png" class="dev-logo col-xs-12">
+						<span class="link-image-text text-center col-xs-12">MySQL</span>
+					</a>
+				</div>
+			</div>
+		</div>
 	</footer>
+
+	<script type="text/javascript">
+		$('#footer').css({
+			'min-height': $(window).height()
+		});
+	</script>
 </div>
 
 <!-- Main scripts -->
