Added work template content

--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,14 @@
 			<div class="col-sm-6">
 				<h3>Hello!</h3>
 				<p>
-					I am Ivo and I have 2+ years experience in developing web applications. I love to made things, I want to learn everyting, but the time flow cannot be stopped.
+					I am Ivo and I have 2+ years experience in developing web applications. I love to make things, I want to learn everyting, but the time flow cannot be stopped.
 				</p>
 				<p>
 					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and trying to do the things better and better. <br/>
 					Usually I working on my own projects based on own ideas or needs.
 				</p>
 				<p>
-					Currently I am interested in AngularJS, Polymer, Node.js and mobile development.
+					Currently I am interested in AngularJS, Polymer, Node.js, Underscore/Backbone and later - mobile development.
 				</p>
 			</div>
 			<div class="col-sm-6 text-center myself-div">
@@ -75,25 +75,25 @@
 				<div class="col-xs-3">
 					<a class="link-image row">
 						<img src="images/dev-logos/js-1.png" class="dev-logo col-xs-12">
-						<span class="link-image-text text-center col-xs-12">JavaScript</span>
+						<span class="link-image-text text-light-red text-center col-xs-12">JavaScript</span>
 					</a>
 				</div>
 				<div class="col-xs-3">
 					<a class="link-image row">
 						<img src="images/dev-logos/jq-2.png" class="dev-logo col-xs-12">
-						<span class="link-image-text text-center col-xs-12">jQuery</span>
+						<span class="link-image-text text-light-red text-center col-xs-12">jQuery</span>
 					</a>
 				</div>
 				<div class="col-xs-3">
 					<a class="link-image row">
 						<img src="images/dev-logos/laravel-1.jpg" class="dev-logo col-xs-12">
-						<span class="link-image-text text-center col-xs-12">Laravel 4</span>
+						<span class="link-image-text text-light-red text-center col-xs-12">Laravel 4</span>
 					</a>
 				</div>
 				<div class="col-xs-3">
 					<a class="link-image row">
 						<img src="images/dev-logos/mysql-1.png" class="dev-logo col-xs-12">
-						<span class="link-image-text text-center col-xs-12">MySQL</span>
+						<span class="link-image-text text-light-red text-center col-xs-12">MySQL</span>
 					</a>
 				</div>
 			</div>
@@ -110,5 +110,6 @@
 <!-- Main scripts -->
 <script type="text/javascript" src="js/generic-tabs.js"></script>
 <script type="text/javascript" src="js/startup-animations.js"></script>
+<script type="text/javascript" src="js/tooltips.js"></script>
 </body>
 </html>
