--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 				</p>
 				<p>
 					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and trying to do the things better and better. <br/>
-					Usually I working on my own projects based on own ideas or needs.
+					Usually I working on my own projects which are based on own ideas or needs.
 				</p>
 				<p>
 					Currently I am interested in AngularJS, Polymer, Node.js, Underscore/Backbone and later - mobile development.
