--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
 
 	<section id="section" class="container-fluid content-holder">
 		<div class="tabs-row row">
-			<div class="col-sm-3 text-center generic-tab tab-knowledge"><span class="btn btn-info">Knowledge</span></div>
-			<div class="col-sm-3 text-center generic-tab tab-work"><span class="btn btn-info">Work</span></div>
-			<div class="col-sm-3 text-center generic-tab tab-motiv"><span class="btn btn-info">Motivation</span></div>
-			<div class="col-sm-3 text-center generic-tab tab-contact"><span class="btn btn-info">Contact</span></div>
+			<div class="col-sm-3 text-center generic-tab tab-knowledge"><span class="btn btn-success">Knowledge</span></div>
+			<div class="col-sm-3 text-center generic-tab tab-work"><span class="btn btn-success">Work</span></div>
+			<div class="col-sm-3 text-center generic-tab tab-motiv"><span class="btn btn-success">Motivation</span></div>
+			<div class="col-sm-3 text-center generic-tab tab-contact"><span class="btn btn-success">Contact</span></div>
 		</div>
 		<div class="container-fluid">
 			<hr/>
