Added symlink to root folder (for gh-pages), typo fixes.

--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,21 @@
 				</p>
 				<p>
 					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and trying to do the things better and better. <br/>
-					Usually I working on my own projects which are based on own ideas or needs.
+					I usually work on own projects which are based on own ideas or needs.
 				</p>
 				<p>
 					Currently I am interested in AngularJS, Polymer, Node.js, Underscore/Backbone and later - mobile development.
 				</p>
 			</div>
 			<div class="col-sm-6 text-center myself-div">
-				<img src="images/myself.jpg" alt="Me" class="img-thumbnail myself-image">
+				<img src="images/myself.jpg" alt="Me" class="img-thumbnail myself-image" alt="My self">
 			</div>
 		</div>
 	</div>
 
 	<section id="section" class="container-fluid content-holder">
 		<div class="tabs-row row">
-			<div class="col-sm-3 text-center generic-tab tab-knowledge"><span class="btn btn-success">Knowledge</span></div>
+			<div class="col-sm-3 text-center generic-tab tab-knowledge"><span class="btn btn-success">Skills</span></div>
 			<div class="col-sm-3 text-center generic-tab tab-work"><span class="btn btn-success">Work</span></div>
 			<div class="col-sm-3 text-center generic-tab tab-motiv"><span class="btn btn-success">Motivation</span></div>
 			<div class="col-sm-3 text-center generic-tab tab-contact"><span class="btn btn-success">Contact</span></div>
