--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Portfolio (Ivo Tanev)</title>
+	<link rel="shortcut icon" type="image/png" href="/images/icons/favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<!-- jQuery -->
