motivation tab removed

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
 
 	<section id="section" class="container-fluid content-holder">
 		<div class="tabs-row row">
-			<div class="col-sm-3 text-center generic-tab tab-knowledge"><span class="btn btn-success">Skills</span></div>
-			<div class="col-sm-3 text-center generic-tab tab-work"><span class="btn btn-success">Work</span></div>
-			<div class="col-sm-3 text-center generic-tab tab-motiv"><span class="btn btn-success">Motivation</span></div>
-			<div class="col-sm-3 text-center generic-tab tab-contact"><span class="btn btn-success">Contact</span></div>
+			<div class="col-sm-4 text-center generic-tab tab-knowledge"><span class="btn btn-success">Skills</span></div>
+			<div class="col-sm-4 text-center generic-tab tab-work"><span class="btn btn-success">Work</span></div>
+			<!-- MOTIVATION TAB DISABLED -->
+<!-- 			<div class="col-sm-3 text-center generic-tab tab-motiv"><span class="btn btn-success">Motivation</span></div> -->
+			<div class="col-sm-4 text-center generic-tab tab-contact"><span class="btn btn-success">Contact</span></div>
 		</div>
 		<div class="container-fluid">
 			<hr/>
