--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 					I am Ivo and I have 2+ years experience in developing web applications. I love to make things, I want to learn everyting, but the time flow cannot be stopped.
 				</p>
 				<p>
-					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and trying to do the things better and better. <br/>
-					I usually work on own projects which are based on own ideas or needs.
+					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and I trying to do better things<br/>
+					Usually, I working on own projects which are based on own ideas or needs.
 				</p>
 				<p>
-					Currently I am interested in AngularJS, Polymer, Node.js, Underscore/Backbone and later - mobile development.
+					Currently I am interested in AngularJS, Polymer, Node.js, Underscore/Backbone and later java for mobile development.
 				</p>
 			</div>
 			<div class="col-sm-6 text-center myself-div">
