--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<header id="header" class="container-fluid jumbotron">
 		<h1>My Portfolio</h1>
 		<p>- Ivo Tanev from Burgas, Bulgaria.</p>
-		<p>high motivated web developer.</p>
+		<p>- Web developer</p>
 	</header>
 
 	<div id='about-me' class="container">
