--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 			<div class="col-sm-6">
 				<h3>Hello!</h3>
 				<p>
-					I am Ivo and I have 2+ years experience in developing web applications. I love to make things, I want to learn everyting, but the time flow cannot be stopped.
+					I am Ivo and I have 3+ years experience in developing web applications. I love to make things, I want to learn everyting, but the time flow cannot be stopped.
 				</p>
 				<p>
-					I am single developer experienced in full web application development. From the arhitecture to the deployment. I am learning new things every day and I trying to do better things<br/>
-					Usually, I working on own projects which are based on own ideas or needs.
+					I am currently working on closed source projects for an company. Using AngularCLI and Java E2E for testing.
+					Before starting this work I was single developer experienced in full web application development. From the arhitecture to the deployment.
 				</p>
 				<p>
-					Currently I am interested in AngularJS, Polymer, Node.js, Underscore/Backbone and later java for mobile development.
+					Currently I am interested in AngularJS, Node.js, TypeScript, Dart and Java for mobile development.
 				</p>
 			</div>
 			<div class="col-sm-6 text-center myself-div">
