Added SITE IS OUT OF DATE alert
TODO: update the site information

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <body>
 <div class="container-fluid" id="wrapper">
 	<header id="header" class="container-fluid jumbotron">
+		<div class="alert alert-danger">
+			<h4>The site information (such as skills technologies and etc.) is out of date!</h4>
+			Sorry for the inconvenience!
+		</div>
 		<h1>My Portfolio</h1>
 		<p>- Ivo Tanev from Burgas, Bulgaria.</p>
 		<p>- Web developer</p>
